--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.1.0",
-    "react-native": "0.70.1",
+    "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.7.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-safe-area-view": "^1.1.1",
@@ -58,21 +59,12 @@
     "@nrwl/nest": "^14.8.3",
     "@nrwl/node": "^14.8.6",
     "@nrwl/react-native": "^14.8.6",
-    "@nrwl/storybook": "^14.8.3",
     "@nrwl/web": "^14.8.6",
     "@nrwl/workspace": "^14.8.6",
     "@react-native-async-storage/async-storage": "1.17.10",
     "@react-native-community/cli": "9.1.1",
     "@react-native-community/cli-platform-android": "9.1.0",
     "@react-native-community/cli-platform-ios": "9.1.0",
-    "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "~6.5.9",
-    "@storybook/addon-ondevice-actions": "^6.0.1-beta.5",
-    "@storybook/addon-ondevice-backgrounds": "^6.0.1-beta.5",
-    "@storybook/addon-ondevice-controls": "^6.0.1-beta.5",
-    "@storybook/addon-ondevice-notes": "^6.0.1-beta.5",
-    "@storybook/core-server": "~6.5.9",
-    "@storybook/react-native": "^6.0.1-beta.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "4.0.12",
     "@testing-library/react-native": "11.1.0",
