INHEART-94: Run on master

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: build-android
 on:
   push:
     branches:
-      - release
+      - master
 jobs:
   build-android:
     runs-on: ubuntu-latest
