--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: build
 on:
   push:
     branches:
-      - master
+      - feature/INHEART-309
 jobs:
   build-android:
     runs-on: ubuntu-latest
