--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,27 +101,27 @@ jobs:
         working-directory: ./apps/mobile/
         run: cd ios && pod install --repo-update && cd ..
 
-      - name: Build IOS App
-        uses: yukiarrr/ios-build-action@v1.4.0
-        with:
-          project-path: apps/mobile/ios/inHEARTive.xcodeproj
-          # IOS_P12_BASE64 - key and certificate
-          p12-base64: ${{ secrets.IOS_P12_BASE64 }}
-          # IOS_MOBILE_PROVISION_BASE64 : Base64 encoded Provisioning profile file.
-          mobileprovision-base64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
-          code-signing-identity: 'iPhone Distribution'
-          # IOS_TEAM_ID : your apple team id
-          team-id: ${{ secrets.IOS_TEAM_ID }}
-          # IOS_CERTIFICATE_PASSWORD : Password used to generate p2 certificate
-          certificate-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-          workspace-path: apps/mobile/ios/inHEARTive.xcworkspace
-          scheme: inHEARTive
-
-      - name: 'Upload app to TestFlight'
-        uses: apple-actions/upload-testflight-build@v1
-        with:
-          app-path: 'output.ipa'
-          issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
-          api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
-          api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
+#      - name: Build IOS App
+#        uses: yukiarrr/ios-build-action@v1.4.0
+#        with:
+#          project-path: apps/mobile/ios/inHEARTive.xcodeproj
+#          # IOS_P12_BASE64 - key and certificate
+#          p12-base64: ${{ secrets.IOS_P12_BASE64 }}
+#          # IOS_MOBILE_PROVISION_BASE64 : Base64 encoded Provisioning profile file.
+#          mobileprovision-base64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
+#          code-signing-identity: 'iPhone Distribution'
+#          # IOS_TEAM_ID : your apple team id
+#          team-id: ${{ secrets.IOS_TEAM_ID }}
+#          # IOS_CERTIFICATE_PASSWORD : Password used to generate p2 certificate
+#          certificate-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
+#          workspace-path: apps/mobile/ios/inHEARTive.xcworkspace
+#          scheme: inHEARTive
+#
+#      - name: 'Upload app to TestFlight'
+#        uses: apple-actions/upload-testflight-build@v1
+#        with:
+#          app-path: 'output.ipa'
+#          issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+#          api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
+#          api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
       - run: echo "🎉 ${{ job.status }}. 🎉"
