--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,16 +86,16 @@ jobs:
           ruby-version: 2.6
           bundler-cache: true
 
-      - name: Restore Pods cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            apps/mobile/ios/Pods
-            ~/Library/Caches/CocoaPods
-            ~/.cocoapods
-          key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
+#      - name: Restore Pods cache
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            apps/mobile/ios/Pods
+#            ~/Library/Caches/CocoaPods
+#            ~/.cocoapods
+#          key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+#          restore-keys: |
+#            ${{ runner.os }}-pods-
 
       - name: Install Pods
         working-directory: ./apps/mobile/
