--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,9 @@ jobs:
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       # Setup build
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '13.0'
       - name: Check out Git repository
         uses: actions/checkout@v3
 
@@ -86,16 +89,16 @@ jobs:
           ruby-version: 2.6
           bundler-cache: true
 
-#      - name: Restore Pods cache
-#        uses: actions/cache@v3
-#        with:
-#          path: |
-#            apps/mobile/ios/Pods
-#            ~/Library/Caches/CocoaPods
-#            ~/.cocoapods
-#          key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
-#          restore-keys: |
-#            ${{ runner.os }}-pods-
+      - name: Restore Pods cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            apps/mobile/ios/Pods
+            ~/Library/Caches/CocoaPods
+            ~/.cocoapods
+          key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
 
       - name: Install Pods
         working-directory: ./apps/mobile/
