--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,9 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1
       - name: Check out Git repository
         uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '14'
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
