--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,8 +108,11 @@ jobs:
       - name: Build iOS bundle
         run: yarn nx run mobile:bundle-ios
 
-      - name: go to folder ios
-        run: cd /apps/mobile
+      - name: where i am?
+        run: pwd
+      
+      # - name: go to folder ios
+      #   run: cd ./apps/mobile/
 
       - name: Make ipa file
         run: npx react-native bundle --entry-file index.js --bundle-output ios/main.jsbundle --platform ios --dev false xcodebuild -workspace ios/inHEARTive.xcworkspace -scheme inHEARTive -sdk iphoneos -configuration Release archive -archivePath build/inHEARTive.xcarchive xcodebucild -exportArchive -archivePath build/inHEARTive.xcarchive -exportPath build/inHEARTive.ipa
