--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,8 +111,8 @@ jobs:
       - name: where i am?
         run: pwd
       
-      # - name: go to folder ios
-      #   run: cd ./apps/mobile/
+      - name: go to folder ios
+        run: cd ./apps/mobile/
 
       - name: Make ipa file
         run: npx react-native bundle --entry-file index.js --bundle-output ios/main.jsbundle --platform ios --dev false xcodebuild -workspace ios/inHEARTive.xcworkspace -scheme inHEARTive -sdk iphoneos -configuration Release archive -archivePath build/inHEARTive.xcarchive xcodebucild -exportArchive -archivePath build/inHEARTive.xcarchive -exportPath build/inHEARTive.ipa
