--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,6 +18,7 @@
     "react-native-vector-icons": "*",
     "react-native-keyboard-aware-scroll-view": "*",
     "@tanstack/react-query": "*",
-    "react-hook-form": "*"
+    "react-hook-form": "*",
+    "react-native-date-picker": "*"
   }
 }
