--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.41.0",
     "react-is": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-date-picker": "^4.2.6",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^2.10.0",
