--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -7,7 +7,12 @@
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "strict": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "strictBindCallApply": true
   },
   "files": ["../../node_modules/@nrwl/react-native/typings/svg.d.ts"],
   "include": ["libs/ui/**/src/index.ts", "libs/ui/**/src/lib/**/*.tsx"],
