INHEART-322: Added support for ip depending on the device.

--- a/.env.dev
+++ b/.env.dev
@@ -15,3 +15,6 @@ OAUTH2_CALLBACK_URL=http://localhost:3333/api/_auth/callback
 OAUTH2_CLIENT_ID=nestjs
 OAUTH2_CLIENT_SECRET=O9Xfb2cpciI1tTgzpHWjWuA7tv3FJkWO
 OAUTH2_SCOPE="profile email"
+
+API_URL_PREFIX_IOS='http://localhost:3333/api'
+API_URL_PREFIX_ANDROID='http://10.0.2.2:3333/api'
