--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,5 +18,5 @@ steps:
 - script: |
     npm install --global yarn
     yarn install
-    nx build backend
+    yarn nx build backend
   displayName: 'npm install and build'
