Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -24,12 +24,18 @@ steps:
     yarn install
   displayName: 'Install dependencies'
 
-# - script: |
-#     npm install --global yarn
-#     yarn install
-#     yarn nx build backend
-#   displayName: 'Build application'
-
 - script: |
-    yarn start
-  displayName: 'Start application'
+    npm install --global yarn
+    yarn install
+    yarn nx build backend
+  displayName: 'Build application'
+
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Azure subscription 1(1526c5fa-d0e8-4673-affa-fef19142401f)'
+    appType: 'webAppLinux'
+    WebAppName: 'inheartiveapi'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    RuntimeStack: 'NODE|18-lts'
+    StartupCommand: 'node main.js'
