--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -29,10 +29,12 @@ steps:
     echo "Building application..."
     yarn nx build backend
   displayName: 'Build application'
-- task: CopyFiles@2
-  inputs:
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: drop'
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+# - task: CopyFiles@2
+#   inputs:
+#     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+# - task: PublishBuildArtifacts@1
+#   displayName: 'Publish Artifact: drop'
+#   inputs:
+#     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+- publish: $(Build.ArtifactStagingDirectory)
+  artifact: inHEARTiveApp
