--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@types/react-is": "17.0.3",
     "@types/react-native": "0.70.6",
     "@types/styled-components": "5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
     "babel-plugin-styled-components": "1.10.7",
@@ -116,7 +116,7 @@
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "tsc-files": "^1.1.3",
-    "typescript": "~4.8.2",
+    "typescript": "4.9.4",
     "yarn-deduplicate": "^6.0.0"
   }
 }
