--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,10 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: PowerShell@2
+  displayName: build
+  env:
+    NODE_OPTIONS: --max_old_space_size=16384
     
 - task: NodeTool@0
   inputs:
