--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,39 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+    versionSpec: '18.x'
+  displayName: 'Install Node engine'
 
 - script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+    npm install --global yarn
+  displayName: 'Install yarn'
+
+- script: |
+    echo "Starting build proccess..."
+    yarn install
+  displayName: 'Install dependencies'
+
+- script: |
+    echo "Building application..."
+    yarn nx build backend --prod
+  displayName: 'Build application'
+  
+- script: |
+    rm -rf ./apps/mobile
+  displayName: 'Delete unnecessary items'
+  
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+    includeRootFolder: false
+    archiveType: zip
+    archiveFile: '$(Build.ArtifactStagingDirectory)/artifact.zip'
+    replaceExistingArchive: true
+  displayName: 'Archive Application'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+  displayName: 'Publish Artifacts'
