--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,18 +4,47 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- master
+  - master
 
 pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '18.x'
+    displayName: 'Install Node engine'
 
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+  - script: |
+      npm install --global yarn
+    displayName: 'Install yarn'
+
+  - script: |
+      echo "Starting build proccess..."
+      yarn install
+    displayName: 'Install dependencies'
+
+  - script: |
+      echo "Building application..."
+      yarn nx build backend --prod
+    displayName: 'Build application'
+
+  - script: |
+      rm -rf ./apps/mobile
+    displayName: 'Delete unnecessary items'
+
+  - task: ArchiveFiles@2
+    inputs:
+      rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+      includeRootFolder: false
+      archiveType: zip
+      archiveFile: '$(Build.ArtifactStagingDirectory)/artifact.zip'
+      replaceExistingArchive: true
+    displayName: 'Archive Application'
+
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      ArtifactName: 'drop'
+      publishLocation: 'Container'
+    displayName: 'Publish Artifacts'
