Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,6 +50,10 @@ steps:
       rm -rf ./apps/mobile
     displayName: 'Delete unnecessary items'
 
+  - script: |
+      ls -al
+    displayName: 'List dir'
+
   - task: ArchiveFiles@2
     inputs:
       rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
