INHEART-361: Change env.dev file and add prod env

--- a/.env.prod
+++ b/.env.prod
@@ -1,8 +1,8 @@
-MODE=dev
+MODE=prod
 
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=pass123
+DB_HOST=#{DB-HOST}#
+DB_USER=#{DB-USER}#
+DB_PASSWORD=#{DB-PASS}#
 
 ASSET_MAX_UPLOAD_SIZE=5242880
 ASSET_UPLOAD_PATH=./apps/backend/src/assets
