Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,6 +57,7 @@ steps:
       rm -rf ./.husky
       rm -rf ./.vscode
       rm -rf ./.storybook
+      rm -rf ./node_modules
     displayName: 'Delete unnecessary items'
 
   - task: ArchiveFiles@2
