--- a/.env.dev
+++ b/.env.dev
@@ -3,6 +3,7 @@ MODE=dev
 DB_HOST=localhost
 DB_USER=postgres
 DB_PASSWORD=pass123
+DB_NAME=postgres
 
 ASSET_MAX_UPLOAD_SIZE=5242880
 ASSET_UPLOAD_PATH=./apps/backend/src/assets
