--- a/.env.prod
+++ b/.env.prod
@@ -3,6 +3,7 @@ MODE=prod
 DB_HOST=#{DB-HOST}#
 DB_USER=#{DB-USER}#
 DB_PASSWORD=#{DB-PASS}#
+DB_NAME=#{DB-NAME}#
 
 ASSET_MAX_UPLOAD_SIZE=5242880
 ASSET_UPLOAD_PATH=./apps/backend/src/assets
