--- a/.env.prod
+++ b/.env.prod
@@ -18,5 +18,5 @@ OAUTH2_CLIENT_ID=nestjs
 OAUTH2_CLIENT_SECRET=O9Xfb2cpciI1tTgzpHWjWuA7tv3FJkWO
 OAUTH2_SCOPE="profile email"
 
-API_URL_PREFIX_IOS='http://localhost:3333/api'
-API_URL_PREFIX_ANDROID='http://10.0.2.2:3333/api'
+API_URL_PREFIX_IOS=#{BACKEND-API-URL}#
+API_URL_PREFIX_ANDROID=#{BACKEND-API-URL}#
