Update deploy pipeline and env approach (#93)
* INHEART-361: Change pipline

* Update azure-pipelines.yml for Azure Pipelines

* Update azure-pipelines.yml for Azure Pipelines

* Update azure-pipelines.yml for Azure Pipelines

* INHEART-361: Change env.dev file and add prod env

* Update azure-pipelines.yml for Azure Pipelines

* Update azure-pipelines.yml for Azure Pipelines

* Update azure-pipelines.yml for Azure Pipelines

* Update azure-pipelines.yml for Azure Pipelines

* Update azure-pipelines.yml for Azure Pipelines

* Update azure-pipelines.yml for Azure Pipelines

* INHEART-361: Update deploy pipeline and env approach

* INHEART-361: Fix API_URLS in dev env variables

--- a/.env.prod
+++ b/.env.prod
@@ -1,9 +1,9 @@
-MODE=dev
+MODE=prod
 
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=pass123
-DB_NAME=postgres
+DB_HOST=#{DB-HOST}#
+DB_USER=#{DB-USER}#
+DB_PASSWORD=#{DB-PASS}#
+DB_NAME=#{DB-NAME}#
 
 ASSET_MAX_UPLOAD_SIZE=5242880
 ASSET_UPLOAD_PATH=./apps/backend/src/assets
@@ -18,5 +18,5 @@ OAUTH2_CLIENT_ID=nestjs
 OAUTH2_CLIENT_SECRET=O9Xfb2cpciI1tTgzpHWjWuA7tv3FJkWO
 OAUTH2_SCOPE="profile email"
 
-API_URL_PREFIX_IOS='http://localhost:3333/api'
-API_URL_PREFIX_ANDROID='http://10.0.2.2:3333/api'
+API_URL_PREFIX_IOS=#{BACKEND-API-URL}#
+API_URL_PREFIX_ANDROID=#{BACKEND-API-URL}#
