INHEART-361: Run database connection at prod Add SSL certificate AddSSL support Change backend port implementation Add PORT ENV to PROD ENV file

--- a/.env.prod
+++ b/.env.prod
@@ -5,6 +5,8 @@ DB_USER=#{DB-USER}#
 DB_PASSWORD=#{DB-PASS}#
 DB_NAME=#{DB-NAME}#
 
+BACKEND_PORT=8080
+
 ASSET_MAX_UPLOAD_SIZE=5242880
 ASSET_UPLOAD_PATH=./apps/backend/src/assets
 
