--- a/.github/workflows/dev-backend.yml
+++ b/.github/workflows/dev-backend.yml
@@ -50,11 +50,16 @@ jobs:
       - name: Zip Artifact
         run: |
           zip -r artifact.zip artifact
-      - name: Upload to FTP Server
-        uses: samuelaime/ftp-deploy-action@v1.0.0
+    steps:
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v3
+      
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
-          ftp-server: ${{ secrets.FTP_SERVER }}
-          ftp-username: ${{ secrets.FTP_USERNAME }}
-          ftp-password: ${{ secrets.FTP_PASSWORD }}
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
           local-dir: artifact.zip
-          remote-dir: /
+          server-dir: /
+          
