INHEART-374: Fix path .env

--- a/.github/workflows/dev-backend.yml
+++ b/.github/workflows/dev-backend.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Replace Tokens
         id: replace_tokens
         run: |
-          mv **/*.envgithub.dev .env
+          mv .envgithub.dev .env
       - name: Install Node engine
         uses: actions/setup-node@v2
         with:
