INHEART-309: Add pwd comm to Install Pods script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,7 @@ jobs:
             ${{ runner.os }}-pods-
 
       - name: Install Pods
+        run: pwd
         run: cd ios && pod install --repo-update && cd ..
 
       - name: Build IOS App
