--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,7 +103,7 @@ jobs:
             ${{ runner.os }}-pods-
 
       - name: PWD
-        run: pwd
+        run: pwd && ls -a
 
       - name: Install Pods
         run: cd ios && pod install --repo-update && cd ..
