--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
         run: pwd && ls -a
 
       - name: Install Pods
-        run: cd ios && pod install --repo-update && cd ..
+        run: cd apps/mobile/ios && pod install --repo-update && cd ..
 
       - name: Build IOS App
         uses: yukiarrr/ios-build-action@v1.4.0
